# bit-platform

./: .gitmodules  CMakeLists.txt
include/bit/platform/concurrency/pools/: thread_pool.hpp
include/bit/platform/concurrency/pools/detail/: thread_pool.inl
include/bit/platform/concurrency/primitives/: null_mutex.hpp  semaphore.hpp  shared_mutex.hpp  spin_lock.hpp
include/bit/platform/concurrency/primitives/detail/: null_mutex.inl
include/bit/platform/concurrency/schedulers/: concurrent_task_scheduler.hpp  serial_task_scheduler.hpp  task.hpp  task_scheduler.hpp  this_task_scheduler.hpp
include/bit/platform/concurrency/schedulers/detail/: concurrent_task_scheduler.inl  serial_task_scheduler.inl  task.inl  task_scheduler.inl  this_task_scheduler.inl
include/bit/platform/concurrency/utilities/: concurrent_queue.hpp  thread.hpp  true_share.hpp  unlock_guard.hpp  waitable_event.hpp
include/bit/platform/concurrency/utilities/detail/: concurrent_queue.inl  true_share.inl  unlock_guard.inl  waitable_event.inl
include/bit/platform/filesystem/: crypto_file_device.hpp  directory_watcher.hpp  disk_file_device.hpp  disk_filesystem.hpp  file.hpp  filesystem.hpp  mode.hpp  null_file_device.hpp  random_file_device.hpp
include/bit/platform/filesystem/detail/: filesystem.inl  mode.inl  tags.hpp
include/bit/platform/filesystem/detail/filesystem/: abstract_file.hpp  async_file.hpp  async_file.inl  file.hpp  file.inl  file_device.hpp  file_device.inl  mode.hpp  mode.inl
include/bit/platform/input/: keyboard.hpp
include/bit/platform/system/: controller.hpp  event.hpp  keyboard.hpp  processor.hpp  window.hpp
include/bit/platform/threading/: concurrent_queue.hpp  concurrent_task_scheduler.hpp  dispatch_queue.hpp  dispatcher.hpp  job.hpp  job_dispatcher.hpp  null_mutex.hpp  semaphore.hpp  serial_task_scheduler.hpp  shared_mutex.hpp  spin_lock.hpp  task.hpp  task_scheduler.hpp  this_task_scheduler.hpp  thread.hpp  thread_pool.hpp  true_share.hpp  unlock_guard.hpp  waitable_event.hpp
include/bit/platform/threading/detail/: concurrent_queue.inl  concurrent_task_scheduler.inl  dispatch_queue.inl  dispatcher.inl  job.inl  job_dispatcher.inl  null_mutex.inl  serial_task_scheduler.inl  task.inl  task_scheduler.inl  this_task_scheduler.inl  thread_pool.inl  true_share.inl  unlock_guard.inl  waitable_event.inl
include/bit/platform/timing/: clock.hpp  scope_clock.hpp
src/bit/platform/concurrency/primitives/: spin_lock.cpp
src/bit/platform/concurrency/primitives/mac/: semaphore.cpp
src/bit/platform/concurrency/primitives/posix/: semaphore.cpp
src/bit/platform/concurrency/primitives/win32/: semaphore.cpp
src/bit/platform/concurrency/schedulers/: concurrent_task_scheduler.cpp  serial_task_scheduler.cpp  task.cpp
src/bit/platform/concurrency/schedulers/detail/: task_queue.cpp  task_queue.hpp
src/bit/platform/concurrency/utilities/mac/: thread.cpp
src/bit/platform/concurrency/utilities/posix/: thread.cpp
src/bit/platform/concurrency/utilities/win32/: thread.cpp
src/bit/platform/filesystem/: crypto_file.cpp  crypto_file.hpp  crypto_file_device.cpp  filesystem.cpp  null_file.cpp  null_file.hpp  null_file_device.cpp  random_file.cpp  random_file.hpp  random_file_device.cpp
src/bit/platform/filesystem/win32/: directory_watcher.cpp  disk_file.cpp  disk_file.hpp  disk_file_device.cpp  disk_filesystem.cpp
src/bit/platform/input/: keyboard.cpp
src/bit/platform/input/win32/: keyboard.cpp
src/bit/platform/system/: cpuid.cpp  cpuid.hpp  event.cpp  keyboard.cpp  processor.cpp
src/bit/platform/system/win32/: keyboard.cpp  window.cpp
src/bit/platform/threading/: concurrent_task_scheduler.cpp  dispatch_queue.cpp  dispatcher.cpp  job.cpp  job_dispatcher.cpp  serial_task_scheduler.cpp  spin_lock.cpp  task.cpp
src/bit/platform/threading/detail/: job_queue.cpp  job_queue.hpp  task_queue.cpp  task_queue.hpp
src/bit/platform/threading/mac/: semaphore.cpp  thread.cpp
src/bit/platform/threading/posix/: semaphore.cpp  thread.cpp
src/bit/platform/threading/win32/: semaphore.cpp  thread.cpp
src/bit/platform/timing/: clock.cpp
test/: CMakeLists.txt
